--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: "8080"
   host: "0.0.0.0"
 
 k8s:
-  namespace: "default"
+  namespace: "kserve"
   inCluster: true
 
 logging:
